like Carp already use it, so it gets loaded no matter what.  I'm about
tapped for startup-optimizing ideas that don't involve rewriting
POE::Preprocessor.

Removed the object layer; files are being restructured as a separate
component.  This is ahead of schedule.

Added POE::Wheel::ReadLine.  This is a Term::ReadLine subset that
cooperates with POE.  Now how do I test it non-interactively?


0.1205 2001.02.12
-----------------

Added TRACE_RESULTS to lib/TestSetup.  One of the tests in 0.1204 hung
on a user's machine, and it was impossible to figure it out remotely
without first seeing which test hung.

Solaris wasn't setting termios parameters without TCSANOW.  Wheel::Run
wouldn't work in pty mode because the terminal parameters weren't
being set.

Make Wheel::Run's pty conduits run in "raw" or cbreak mode.

Rob Bloodgood found some POD breakage; C<=item>s without blank lines
between them, and things like that.  Patch applied, and I went through
everything and cleaned up some trailing whitespace (none of it
significant) just for kicks.

Newton Brown found a bug in POE's Tk support, which turns out to be a
known issue with Tk's fileevent mechanism.  Thanks to "good_call" via
usenet news for pointing me at
<http://www.xray.mpe.mpg.de/mailing-lists/ptk/2000-12/msg00060.html>,
which explains fileevent's pitfalls and provides their work-arounds.

Oh.  I added a test to t/06_tk.t to exercise the fileevent bug.

Added Tk workarounds to make the new failing tests pass.  Hooray!

Added file/line reporting in Session's trace option, so the sources of
events are now reported.

Apply a bunch of notes Rob Bloodgood sent in about the postback
documentation in POE::Session.

Added ReadWrite methods: get_input_filter and get_output_filter, so
that filters' methods can be manipulated directly.


0.1204 2001.01.13
-----------------

Fletch pointed out that SunOS has a psrinfo command to describe a
Sparc's processors.  Excellent!  Updated the README.
